--- a/src/app/courses/course-list/course-list.component.html
+++ b/src/app/courses/course-list/course-list.component.html
@@ -21,8 +21,8 @@
       <!-- <tr *ngFor="let course of courses"> -->
       <tr>
         <td>{{ courses.indexOf(course) + 1 }}</td>
-        <td>{{ course.course_id }}</td>
-        <td>{{ course.teacher_id }}</td>
+        <td>{{ course.id }}</td>
+        <td>{{ course.teacherId }}</td>
         <td>{{ course.name }}</td>
 
         <td>{{ course.startDate }}</td>
