--- a/src/app/admins/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admins/admin-dashboard/admin-dashboard.component.html
@@ -12,14 +12,14 @@
     <li>
       <a href="/teacher-list"> <i class="bi bi-person-fill"></i> Teacher </a>
     </li>
-    <!-- <li>
-      <a href="/add-admin">
-        <i class="bi bi-person-fill"></i> Panding Enrollment
+    <li>
+      <a href="/assignment-list">
+        <i class="bi bi-person-fill"></i> Assignments
       </a>
-  </li> -->
+  </li>
 
     <li>
-      <a href="/add-admin">
+      <a href="/pending-enroll">
         <i class="bi bi-person-fill"></i> Panding Enrollment
       </a>
     </li>
@@ -42,7 +42,7 @@
     </li>
 
     <li>
-      <a href="#"> <i class="bi bi-play-btn-fill"></i> Classes</a>
+      <a href="add-recordClass"> <i class="bi bi-play-btn-fill"></i> Classes</a>
     </li>
   </ul>
 </div>
