--- a/src/app/courses/course/course.component.html
+++ b/src/app/courses/course/course.component.html
@@ -20,7 +20,7 @@
 
               <div class="card-body text-center">
                   <!-- Course Name -->
-                  <h5 class="card-title fw-bold text-primary">{{ course.name }}</h5>
+                  <h5 class="card-title fw-bold text-primary">{{ course.courseName }}</h5>
 
                   <!-- Short description -->
                   <p class="card-text text-muted">✍️ {{ course.description }}</p>
