--- a/src/app/courses/add-course/add-course.component.html
+++ b/src/app/courses/add-course/add-course.component.html
@@ -2,15 +2,17 @@
   <fieldset>
     <h1>{{ isUpdate ? "Edit Course" : "Add Course" }}</h1>
     <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
+      <input type="hidden" name="id" [(ngModel)]="cor.id" hidden /><br />
+
       <label for="teacher">Teacher</label><br />
       <select name="teacher" [(ngModel)]="cor.teacherId" required style="width: 100%;">
         <option *ngFor="let teacher of teachers" [value]="teacher.id">
-          {{ teacher.id }} {{ teacher.name }} 
+          {{ teacher.id }} {{ teacher.name }}
         </option>
       </select><br />
 
       <label for="name">Name:</label><br />
-      <input type="text" name="name" [(ngModel)]="cor.name" required /><br />
+      <input type="text" name="name" [(ngModel)]="cor.courseName" required /><br />
 
       <label for="price">Price</label><br />
       <input type="text" name="price" [(ngModel)]="cor.price" required /><br />
