--- a/src/app/lessons/add-lesson/add-lesson.component.html
+++ b/src/app/lessons/add-lesson/add-lesson.component.html
@@ -7,8 +7,13 @@
     <label for="title">Title:</label><br />
     <input type="text" name="title" [(ngModel)]="lessons.topic" required /><br />
 
-   <label for="course_id">Course_Id</label><br>
-   <input type="text" name="course_id" [(ngModel)]="lessons.courseId" required /><br />
+   <label for="courseId">Course_Id</label><br>
+   <select name="courseId" [(ngModel)]="lessons.courseId" required style="width: 100%;">
+    <option *ngFor="let course of cor" [value]="course.id">
+      {{ course.id }} {{ course.name }}
+    </option>
+  </select><br />
+   <!-- <input type="text" name="course_id" [(ngModel)]="lessons.courseId" required /><br /> -->
 
    <label for="content">Content:</label><br />
    <textarea [(ngModel)]="lessons.content" name="content" required></textarea><br />
