--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -16,63 +16,45 @@
 </section>
 <section class="course">
   <h2>Checkout New Releases Of Our Courses</h2>
-  <div class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+ 
 
-      <div class="card" style="width: 16rem;">
-          <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv_al5pqaDdDHWONxiCA-B1mjpNdbA8fEe8g&s" alt="">
-           <div class="card-body">
-             <h5 class="card-title">Learn JAVA</h5>
-             <p class="card-text">Java Programming and Software Engineering Fundamentals Specialization</p>
-           </div>
+    <div class="course">
 
-           <div class="card-body d-flex justify-content-between align-items-center">
-             <a href="/course-details" class="btn btn-primary">View Details</a>
-             <a href="/enroll" class="btn btn-primary">Enroll Now</a>
-           </div>
-         </div>
+  <div class="row mt-4">
+      <div class="col-md-4 mb-4" *ngFor="let course of course">
+          <div class="card shadow-lg rounded-4">
+              <!-- Course Image -->
+              <img [src]="course.image" class="card-img-top img-fluid book-image" alt="Course Image">
+
+              <div class="card-body text-center">
+                  <!-- Course Name -->
+                  <h5 class="card-title fw-bold text-primary">{{ course.courseName }}</h5>
+
+                  <!-- Short description -->
+                  <p class="card-text text-muted">✍️ {{ course.description }}</p>
+
+                  <!-- Course Price -->
+                   <p class="card-text text-success">💲 <strong>Price:</strong> ${{ course.price }}</p>
+
+                  <!-- View details Button -->
+                  <div class="button-container">
+                    <!-- <button class="btn btn-warning shadow-sm fw-bold">
+                       Details
+                    </button> -->
+                     <!-- <button class="btn btn-enroll shadow-sm fw-bold "> Enroll
+                    </button> -->
+                    <a href="/course-details" class="btn btn-success shadow-sm fw-bold "> Details</a>
+                    <a href="/enroll" class="btn btn-success shadow-sm fw-bold "> Enroll</a>
+                  </div>
+
+              </div>
+          </div>
+      </div>
+  </div>
 
 
+</div>
 
-     <div class="card" style="width: 16rem;" >
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR71IUWvrIMT2jSlNNBfSPY-Pa3va_WFOhfeA&s" alt="">
-       <div class="card-body">
-         <h5 class="card-title">Learn Angular</h5>
-         <p class="card-text">This interactive tutorial will teach you the basic building blocks to sta...</p>
-       </div>
-
-       <div class="card-body d-flex justify-content-between align-items-center">
-         <a href="/course-details" class="btn btn-primary">View Details</a>
-          <a href="/enroll" class="btn btn-primary">Enroll Now</a>
-       </div>
-     </div>
-     <div class="card" style="width: 16rem;">
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSuTinuVFvZgh6yhUzsS7AWfa0GHWmXXhZjBg&s" alt="">
-       <div class="card-body">
-         <h5 class="card-title">Learn HTML</h5>
-         <p class="card-text">
-          HTML For Beginners The Easy Way: Start Learning HTML & CSS Today . Html is ....</p>
-       </div>
-
-       <div class="card-body d-flex justify-content-between align-items-center">
-         <a href="/course-details" class="btn btn-primary">View Details</a>
-         <a href="/enroll" class="btn btn-primary">Enroll Now</a>
-       </div>
-     </div>
-
-     <div class="card" style="width: 16rem;" >
-      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR71IUWvrIMT2jSlNNBfSPY-Pa3va_WFOhfeA&s" alt="">
-       <div class="card-body">
-         <h5 class="card-title">Learn Angular</h5>
-         <p class="card-text">This interactive tutorial will teach you the basic building blocks to sta...</p>
-       </div>
-
-       <div class="card-body d-flex justify-content-between align-items-center">
-         <a href="/course-details" class="btn btn-primary">View Details</a>
-          <a href="/enroll" class="btn btn-primary">Enroll Now</a>
-       </div>
-     </div>
-
-    </div>
 
 </section>
 
