--- a/src/app/courses/add-course/add-course.component.html
+++ b/src/app/courses/add-course/add-course.component.html
@@ -20,7 +20,7 @@
       <label for="startDate">Start Date</label><br />
       <input type="date" name="startDate" [(ngModel)]="cor.startDate" required /><br />
 
-      <label for="duration">Course Duration</label><br />
+      <label for="duration">Course Duration (Months)</label><br />
       <input type="text" name="duration" [(ngModel)]="cor.duration" required /><br />
 
       <label for="description">Description:</label><br />
