--- a/src/app/classes/add-record-class/add-record-class.component.html
+++ b/src/app/classes/add-record-class/add-record-class.component.html
@@ -1,3 +1,4 @@
+
 <div class="body">
   <div class="row">
     <!-- Left Side: Admin Dashboard -->
@@ -7,19 +8,31 @@
 
     <!-- Right Side: Form Section -->
     <div class="col-right">
-      <h2>Add Record Classes</h2>
       <fieldset>
-
         <h1>{{ isUpdate ? "Edit Record Class" : "Add Record Class" }}</h1>
-    <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
-
+        <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
+          <!-- Course ID Dropdown -->
           <label for="courseId">Course ID</label>
-          <input type="text" id="courseId" placeholder="Enter Course ID"><br>
+          <select name="courseId" [(ngModel)]="recordClass.courseId" required style="width: 100%;">
+            <option *ngFor="let course of cor" [value]="course.id">
+              {{ course.id }} - {{ course.courseName }}
+            </option>
+          </select>
+          <br />
 
+          <!-- Video URL Input -->
           <label for="videoUrl">Video URL</label>
-          <input type="text" id="videoUrl" placeholder="Enter Video URL"><br>
+          <input
+            type="text"
+            name="videoUrl"
+            [(ngModel)]="recordClass.videoUrl"
+            placeholder="Enter Video URL"
+            required
+          />
+          <br />
 
-          <button type="submit">Add Record</button>
+          <!-- Submit Button -->
+          <button type="submit">{{ isUpdate ? "Update Record" : "Add Record" }}</button>
         </form>
       </fieldset>
     </div>
