--- a/src/app/admins/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admins/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,5 @@
+ <div class="row">
+ <div class="col-left">
 <div class="sidebar">
   <ul class="list-unstyled">
     <li>
@@ -15,6 +17,12 @@
     <li>
       <a href="/assignment-list">
         <i class="bi bi-person-fill"></i> Assignments
+      </a>
+  </li>
+
+    <li>
+      <a href="/enroll-list">
+        <i class="bi bi-person-fill"></i> Enrollment
       </a>
   </li>
 
@@ -46,4 +54,6 @@
     </li>
   </ul>
 </div>
-<div class="content"></div>
+</div>
+</div>
+<!-- <div class="content"></div> -->
