--- a/src/app/enrollments/enrollment-list/enrollment-list.component.html
+++ b/src/app/enrollments/enrollment-list/enrollment-list.component.html
@@ -8,6 +8,7 @@
         <th>Course Name</th>
         <th>Name</th>
         <th>Email</th>
+          <th>Enroll Date</th>
         <th>Status</th>
       </tr>
     </thead>
@@ -17,6 +18,7 @@
         <td>{{ enrollment.courseName }}</td>
         <td>{{ enrollment.name }}</td>
         <td>{{ enrollment.email }}</td>
+          <td>{{ enrollment.enrollmentDate }}</td>
         <td>{{ enrollment.status }}</td>
       </tr>
     </tbody>
