record class done

--- a/src/app/admins/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admins/admin-dashboard/admin-dashboard.component.html
@@ -12,7 +12,7 @@
       <a href="/course-list"> <i class="bi bi-incognito"></i> Courses </a>
     </li>
     <li>
-      <a href="/teacher-list"> <i class="bi bi-person-fill"></i> Teacher </a>
+      <a href="/user-list"> <i class="bi bi-person-fill"></i> User </a>
     </li>
     <li>
       <a href="/assignment-list">
@@ -50,7 +50,7 @@
     </li>
 
     <li>
-      <a href="add-recordClass"> <i class="bi bi-play-btn-fill"></i> Classes</a>
+      <a href="recordClasses"> <i class="bi bi-play-btn-fill"></i> Classes</a>
     </li>
   </ul>
 </div>
