--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -39,11 +39,15 @@
             <!-- View Details and Enroll Buttons -->
             <div class="button-container">
               <a href="/course-details" class="btn btn-success shadow-sm fw-bold">Details</a>
-              <a href="/enroll" class="btn btn-success shadow-sm fw-bold">Enroll</a>
+             <a [routerLink]="'/enroll'" [queryParams]="{ title: course.courseName }"
+              class="btn btn-success shadow-sm fw-bold">
+              Enroll
+            </a>
             </div>
           </div>
         </div>
       </div>
+      <a href="courses">See More</a>
     </div>
   </div>
 </section>
