--- a/src/app/users/add-user/add-user.component.html
+++ b/src/app/users/add-user/add-user.component.html
@@ -31,14 +31,19 @@
       <label for="name">Name:</label><br />
       <input type="text" name="name" [(ngModel)]="users.name" required /><br />
 
+       <label for="email">Email</label><br />
+      <input type="email" name="email" [(ngModel)]="users.email" required /><br />
+
+       <label for="password">Password</label><br />
+      <input type="password" name="password" [(ngModel)]="users.password" required /><br />
+
       <label for="fatherName">Father Name</label><br />
       <input type="text" name="fatherName" [(ngModel)]="users.fatherName" required /><br />
 
       <label for="motherName">Mother Name </label><br />
       <input type="text" name="motherName" [(ngModel)]="users.motherName" required /><br />
 
-      <label for="email">Email</label><br />
-      <input type="email" name="email" [(ngModel)]="users.email" required /><br />
+
 
       <label for="phone">Phone Number:</label><br />
        <input type="text" [(ngModel)]="users.phone" name="phone" required /><br />
